[package]
name = "moon_server"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
env_logger = "0.10.1"
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["full"] }
toml = "0.8.8"
